OO-3610: make the default display of lectures in course configurable